[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.28",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "langgraph",
]


