[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto>=2.49.0",
    "boto3>=1.43.2",
    "botocore>=1.43.2",
    "dotenv>=0.9.9",
    "langchain>=0.3.28",
    "langchain-aws>=0.2.35",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "langgraph",
]


